--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>4.12</version>
             <!--<scope>test</scope>-->
         </dependency>
+
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
